--- a/.classpath
+++ b/.classpath
@@ -2,57 +2,57 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-ant-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-client-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-core-1.2.1.jar" sourcepath="D:/hadoop"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-examples-1.2.1.jar" sourcepath="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-minicluster-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-test-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/hadoop-tools-1.2.1.jar" sourcepath="D:/hadoop"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/asm-3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/aspectjrt-1.6.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/aspectjtools-1.6.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-beanutils-core-1.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-codec-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-configuration-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-daemon-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-el-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-httpclient-3.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-io-2.1.jar" sourcepath="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-logging-api-1.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-math-2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/commons-net-3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/core-3.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/hadoop-capacity-scheduler-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/hadoop-fairscheduler-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/hadoop-thriftfs-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/hsqldb-1.8.0.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jackson-core-asl-1.8.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jackson-mapper-asl-1.8.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jasper-compiler-5.5.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jasper-runtime-5.5.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jdeb-0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jersey-core-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jersey-json-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jersey-server-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jets3t-0.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jetty-6.1.26.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jetty-util-6.1.26.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/jsch-0.1.42.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/junit-4.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/kfs-0.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/mockito-all-1.8.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/oro-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/servlet-api-2.5-20081211.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/slf4j-api-1.4.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/slf4j-log4j12-1.4.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadooop/资料/hadoop-1.2.1/lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/asm-3.2.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/aspectjrt-1.6.11.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/aspectjtools-1.6.11.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-beanutils-core-1.8.0.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-daemon-1.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-httpclient-3.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-io-2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-logging-api-1.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/commons-net-3.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/core-3.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/hadoop-capacity-scheduler-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/hadoop-fairscheduler-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/hadoop-thriftfs-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/hsqldb-1.8.0.10.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jackson-core-asl-1.8.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jackson-mapper-asl-1.8.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jasper-compiler-5.5.12.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jasper-runtime-5.5.12.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jdeb-0.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jersey-core-1.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jersey-json-1.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jersey-server-1.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jets3t-0.6.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/jsch-0.1.42.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/junit-4.5.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/kfs-0.2.2.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/mockito-all-1.8.5.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/servlet-api-2.5-20081211.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/slf4j-api-1.4.3.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/slf4j-log4j12-1.4.3.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-ant-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-client-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-core-1.2.1.jar" sourcepath="D:/hadoop"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-minicluster-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-tools-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-examples-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/hadoop/hadoop-test-1.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
