--- a/.classpath
+++ b/.classpath
@@ -148,5 +148,65 @@
 	<classpathentry kind="lib" path="E:/big data/big data/hadooop/0827/hive/apache-hive-0.13.1-bin/lib/velocity-1.5.jar"/>
 	<classpathentry kind="lib" path="E:/big data/big data/hadooop/0827/hive/apache-hive-0.13.1-bin/lib/xz-1.0.jar"/>
 	<classpathentry kind="lib" path="E:/big data/big data/hadooop/0827/hive/apache-hive-0.13.1-bin/lib/zookeeper-3.4.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/avro-1.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/avro-ipc-1.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-beanutils-core-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-io-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/commons-net-1.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/core-3.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/guava-11.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/hadoop-core-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/high-scale-lib-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/httpclient-4.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/httpcore-4.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jackson-core-asl-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jackson-jaxrs-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jackson-mapper-asl-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jackson-xc-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jamon-runtime-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jasper-compiler-5.5.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jasper-runtime-5.5.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jaxb-api-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jaxb-impl-2.2.3-1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jersey-core-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jersey-json-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jersey-server-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jettison-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jruby-complete-1.6.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jsp-2.1-6.1.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jsp-api-2.1-6.1.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/libthrift-0.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/metrics-core-2.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/netty-3.2.4.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/protobuf-java-2.4.0a.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/servlet-api-2.5-6.1.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/slf4j-api-1.4.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/slf4j-log4j12-1.4.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/snappy-java-1.0.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/velocity-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/lib/zookeeper-3.4.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/hbase-0.94.21.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CLY/Desktop/hadoop/资料/hbase-0.94.21/hbase-0.94.21/hbase-0.94.21-tests.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
